--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "framer-motion": "^10.9.1",
+    "geoip-lite": "^1.4.7",
+    "google-map-react": "^2.2.0",
+    "got": "^11.8.3",
+    "js-cookie": "^3.0.1",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
+    "platform": "^1.3.6",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "uid": "^2.0.1",
     "web-vitals": "^2.1.4"
