--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "uid": "^2.0.1",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
