--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "express-ip": "^1.0.4",
     "framer-motion": "^10.9.1",
     "geoip-lite": "^1.4.7",
     "google-map-react": "^2.2.0",
