--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "express-ip": "^1.0.4",
+    "form-data": "^4.0.0",
     "framer-motion": "^10.9.1",
     "geoip-lite": "^1.4.7",
     "google-map-react": "^2.2.0",
